# mlb-live-model

./: .gitignore  pyproject.toml  testing.ipynb
src/data/: collection.py  utils.py
src/database/: db.py  models.py  utils.py
src/models/: game_result.py  game_snapshot.py
