[tool.poetry]
name = "mlb-live-model"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.4.1"
duckdb = "^1.0.0"
pyarrow = "^17.0.0"
httpx = "^0.27.0"
ruff = "^0.5.7"
sqlalchemy = "^2.0.32"
duckdb-engine = "^0.13.1"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
